# EbbRT-llama.cpp

./: CMakeLists.txt  CMakeLists.txt.bak  README.md  b3216.md  ebbrtbm.sh
src/: Makefile  benchmark-matmult.cpp  custom.cpp  ggml-test.cpp  ggml.c  ggml.cpp  ggml.h  llama.cpp  simple-ctx.cpp  simple.cpp  simple.h  unicode.cpp
src/common/: build-info.cpp  common.cpp  grammar-parser.cpp  json-schema-to-grammar.cpp  json.hpp
